--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         If you are not redirected automatically, 
-        follow the <a href="https://hetpatelofficial.github.io/OctNewsletterblob/main/cf/themes.envytheme.com/html/index.html">link to the documentation</a>
+        follow the <a href="https://hetpatelofficial.github.io/OctNewsletterblob/main/cf/themes.envytheme.com/alpas/index.html">link to the documentation</a>
     </body>
 </html>
