--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=html/index.html">
+        <meta http-equiv="refresh" content="1;url=https://avinashtechlvr.github.io/octnewsletter/themes.envytheme.com/alpas/index.html">
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, 
-        follow the <a href="https://hetpatelofficial.github.io/OctNewsletterblob/main/cf/themes.envytheme.com/alpas/index.html">link to the documentation</a>
+        If you are not redirected automatically, follow the
+        follow the <a href="https://avinashtechlvr.github.io/octnewsletter/blob/main/themes.envytheme.com/alpas/index.html">link to the documentation</a>
     </body>
 </html>
