--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=https://hetpatelofficial.github.io/OctNewsletter/themes.envytheme.com/alpas/index.html">
+        <meta http-equiv="refresh" content="1;url=https://hetpatelofficial.github.io/OctNewsletter/blob/main/themes.envytheme.com/alpas/index.html">
         <title>Page Redirection</title>
     </head>
     <body>
